--- a/results.html
+++ b/results.html
@@ -79,6 +79,14 @@
           <td>12.5</td>
       </tr>
     </table>
+    <br>
+<!--Winner Result-->
+      <table class="teams">
+        <th colspan="2">Winner:</th>
+        <tr>
+            <th>Tie</th>
+        </tr>
+    </table>
 
       <button onclick="history.back()">Go Back</button>
 
