--- a/history.html
+++ b/history.html
@@ -37,9 +37,13 @@
           <tr>
             <td><a href="https://apbh133.github.io/rydercup2022/">2022: Europe 11.5 - 7.5</a></td>
         </tr>
-        <tr>
-            <td></td>
+            <tr>
+            <td><a href="https://apbh133.github.io/rydercup2023/">2023: Tie 12.5 - 12.5</a></td>
         </tr>
+        <tr>
+            <td><a href="https://apbh133.github.io/rydercup2024/">2024: Team USA 10.5 - 9.5</a></td>
+        </tr>
+
   
         
         
